--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <!-- INTRO -->
       <section class="screen intro">
         <div class="content reveal">
+          <h1 class="gf-name">Happy New Year</h1>
           <h1 class="gf-name">Kristine Joi L Dagotdot</h1>
           <p class="tap-hint">
             Tap to relive our year and remember our time together
